--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@ h6 {
 img {
 	display: block;
 	max-width: 100%;
+	height: auto;
 }
 
 a {
@@ -43,16 +44,40 @@ body {
 
 .container {
 	max-width: 1158px;
-	padding-left: 15px;
-	padding-right: 15px;
-	margin-left: auto;
-	margin-right: auto;
+	min-width: 320px;
+	padding-left: 16px;
+	padding-right: 16px;
+
+	margin: 0 auto;
+}
+@media screen and (min-width: 1158px) {
+	.container {
+		padding-left: 15px;
+		padding-right: 15px;
+	}
+}
+.visually-hidden {
+	display: none;
+	position: absolute;
+	width: 1px;
+	height: 1px;
+	margin: -1px;
+	border: 0;
+	padding: 0;
+	white-space: nowrap;
+	clip-path: inset(100%);
+	clip: rect(0 0 0 0);
+	overflow: hidden;
 }
 
 .section {
-	padding: 120px 0;
+	padding: 96px 0;
 }
-
+@media screen and (min-width: 1158px) {
+	.section {
+		padding: 120px 0;
+	}
+}
 /*--------------*/
 /*--- header ---*/
 /*--------------*/
@@ -225,28 +250,14 @@ body {
 
 .advantages__title {}
 
-.visually-hidden {
-	display: none;
-	position: absolute;
-	width: 1px;
-	height: 1px;
-	margin: -1px;
-	border: 0;
-	padding: 0;
-	white-space: nowrap;
-	clip-path: inset(100%);
-	clip: rect(0 0 0 0);
-	overflow: hidden;
-}
-
 .advantages__list {
 	display: flex;
-	gap: 24px;
-	justify-content: space-between;
+	flex-wrap: wrap;
+	gap: 72px;
 }
 
 .advantages__item {
-	width: calc((100% - 72px) / 4);
+	width: 100%;
 }
 
 .item-advantages__image {
@@ -258,6 +269,7 @@ body {
 	align-items: center;
 	justify-content: center;
 	height: 112px;
+	display: none;
 }
 
 .item-advantages__icon {
@@ -266,24 +278,59 @@ body {
 
 .item-advantages__head {
 	color: #2E2F42;
-	font-size: 20px;
-	font-weight: 500;
-	line-height: 1.2;
 	letter-spacing: 0.02em;
 	margin-bottom: 8px;
+	text-transform: capitalize; 
+	font-size: 36px;
+	font-weight: 700;
+	line-height: 1.11;
+	text-align: center;
 }
 
 .item-advantages__body {
 	line-height: 1.5;
+	font-weight: 500;
 }
-
+@media screen and (min-width: 768px) {
+	.advantages__list {
+		gap: 72px 24px;
+	}
+	.advantages__item {
+		width: calc((100% - 24px) / 2);
+	}
+	.item-advantages__head {
+		text-align: left;
+	}
+}
+@media screen and (min-width: 1158px) {
+	.advantages__list {
+		gap: 24px;
+	}
+	.advantages__item {
+		width: calc((100% - 72px) / 4);
+	}
+	.item-advantages__image {
+		display: flex;
+	}
+	.item-advantages__head {
+		font-size: 20px;
+		font-weight: 500;
+		line-height: 1.2;
+	}
+	.item-advantages__body {
+		font-weight: normal;
+	}
+}
 /*------------*/
 /*--- team ---*/
 /*------------*/
 .team {
 	background-color: #F4F4FD;
 }
-
+.team__container {
+	padding-left: 28px;
+	padding-right: 28px;
+}
 .section-title {
 	color: #2E2F42;
 	text-align: center;
@@ -297,18 +344,24 @@ body {
 
 .team__list {
 	display: flex;
-	gap: 24px;
-	justify-content: space-between;
+	flex-wrap: wrap;
+	flex-direction: column;
+	align-items: center;
+	gap: 72px;
+	justify-content: center;
 }
 
 .item-team {
 	background-color: #FFFFFF;
-	width: calc((100% - 72px) / 4);
+	width: 100%;
+	max-width: 264px;
 	border-radius: 0px 0px 4px 4px;
 	box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
-.item-team__img {}
+.item-team__img {
+	margin: 0 auto;
+}
 
 .item-team__data {
 	padding: 32px 0;
@@ -359,7 +412,28 @@ body {
 	display: block;
 	fill: #f4f4fd;
 }
-
+@media screen and (min-width: 768px) {
+	.team__container {
+		padding-left: 108px;
+		padding-right: 108px;
+	}
+	.team__list {
+		flex-direction: row;
+		gap: 64px 24px;
+	}
+}
+@media screen and (min-width: 1158px) {
+	.team__container {
+		padding-left: 15px;
+		padding-right: 15px;
+	}
+	.team__list {
+		gap: 24px;
+	}
+	.team__item {
+		width: calc((100% - 72px) / 4);
+	}
+}
 /*-----------------*/
 /*--- portfolio ---*/
 /*-----------------*/
@@ -374,10 +448,13 @@ body {
 	flex-wrap: wrap;
 	column-gap: 24px;
 	row-gap: 48px;
+	justify-content: center;
 }
 
 .item-portfolio {
-	width: calc((100% - 48px) / 3);
+	box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+	width: 100%;
+	max-width: 360px;
 	background: #FFF;
 	transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -414,7 +491,7 @@ body {
 
 .item-portfolio__data {
 	padding: 32px 16px;
-	border: 1px solid #E7E9FC;
+	border: 1px solid #F4F4FD;
 	border-top: none;
 }
 
@@ -430,7 +507,28 @@ body {
 .item-portfolio__body {
 	line-height: 1.5;
 }
-
+@media screen and (min-width: 768px) {
+	.portfolio__list {
+		row-gap: 72px;
+	}
+	.item-portfolio {
+		width: calc((100% - 48px) / 2);
+		background: #FFF;
+		transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	}
+}
+@media screen and (min-width: 1158px) {
+	.portfolio__list {
+		row-gap: 48px;
+	}
+	.item-portfolio {
+		width: calc((100% - 48px) / 3);
+		box-shadow: none;
+	}
+	.item-portfolio__data {
+		border: 1px solid #E7E9FC;
+	}
+}
 /*--------------*/
 /*--- footer ---*/
 /*--------------*/
