--- a/css/styles.css
+++ b/css/styles.css
@@ -50,12 +50,14 @@ body {
 
 	margin: 0 auto;
 }
+
 @media screen and (min-width: 1158px) {
 	.container {
 		padding-left: 15px;
 		padding-right: 15px;
 	}
 }
+
 .visually-hidden {
 	display: none;
 	position: absolute;
@@ -73,11 +75,13 @@ body {
 .section {
 	padding: 96px 0;
 }
+
 @media screen and (min-width: 1158px) {
 	.section {
 		padding: 120px 0;
 	}
 }
+
 /*--------------*/
 /*--- header ---*/
 /*--------------*/
@@ -280,7 +284,7 @@ body {
 	color: #2E2F42;
 	letter-spacing: 0.02em;
 	margin-bottom: 8px;
-	text-transform: capitalize; 
+	text-transform: capitalize;
 	font-size: 36px;
 	font-weight: 700;
 	line-height: 1.11;
@@ -291,46 +295,57 @@ body {
 	line-height: 1.5;
 	font-weight: 500;
 }
+
 @media screen and (min-width: 768px) {
 	.advantages__list {
 		gap: 72px 24px;
 	}
+
 	.advantages__item {
 		width: calc((100% - 24px) / 2);
 	}
+
 	.item-advantages__head {
 		text-align: left;
 	}
 }
+
 @media screen and (min-width: 1158px) {
 	.advantages__list {
 		gap: 24px;
 	}
+
 	.advantages__item {
 		width: calc((100% - 72px) / 4);
 	}
+
 	.item-advantages__image {
 		display: flex;
 	}
+
 	.item-advantages__head {
 		font-size: 20px;
 		font-weight: 500;
 		line-height: 1.2;
 	}
+
 	.item-advantages__body {
 		font-weight: normal;
 	}
 }
+
 /*------------*/
 /*--- team ---*/
 /*------------*/
 .team {
 	background-color: #F4F4FD;
 }
+
 .team__container {
 	padding-left: 28px;
 	padding-right: 28px;
 }
+
 .section-title {
 	color: #2E2F42;
 	text-align: center;
@@ -412,28 +427,34 @@ body {
 	display: block;
 	fill: #f4f4fd;
 }
+
 @media screen and (min-width: 768px) {
 	.team__container {
 		padding-left: 108px;
 		padding-right: 108px;
 	}
+
 	.team__list {
 		flex-direction: row;
 		gap: 64px 24px;
 	}
 }
+
 @media screen and (min-width: 1158px) {
 	.team__container {
 		padding-left: 15px;
 		padding-right: 15px;
 	}
+
 	.team__list {
 		gap: 24px;
 	}
+
 	.team__item {
 		width: calc((100% - 72px) / 4);
 	}
 }
+
 /*-----------------*/
 /*--- portfolio ---*/
 /*-----------------*/
@@ -507,28 +528,34 @@ body {
 .item-portfolio__body {
 	line-height: 1.5;
 }
+
 @media screen and (min-width: 768px) {
 	.portfolio__list {
 		row-gap: 72px;
 	}
+
 	.item-portfolio {
 		width: calc((100% - 48px) / 2);
 		background: #FFF;
 		transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 	}
 }
+
 @media screen and (min-width: 1158px) {
 	.portfolio__list {
 		row-gap: 48px;
 	}
+
 	.item-portfolio {
 		width: calc((100% - 48px) / 3);
 		box-shadow: none;
 	}
+
 	.item-portfolio__data {
-		border: 1px solid #E7E9FC;
+		border-color: #E7E9FC;
 	}
 }
+
 /*--------------*/
 /*--- footer ---*/
 /*--------------*/
