--- a/css/styles.css
+++ b/css/styles.css
@@ -105,7 +105,17 @@ body {
 }
 
 .nav__logo {
-	margin-right: 76px;
+
+}
+@media screen and (min-width: 768px) {
+	.nav__logo {
+		margin-right: 120px;
+	}
+}
+@media screen and (min-width: 1158px) {
+	.nav__logo {
+		margin-right: 76px;
+	}
 }
 
 .logo {
@@ -124,8 +134,13 @@ body {
 
 .nav__list {
 	line-height: 1.5;
-	display: flex;
+	display: none;
 	align-items: center;
+}
+@media screen and (min-width: 768px) {
+	.nav__list {
+		display: flex;
+	}
 }
 
 .nav__item {}
@@ -177,17 +192,38 @@ body {
 
 .address__list {
 	display: flex;
+	flex-direction: column;
 	align-items: center;
+	font-size: 12px;
+}
+
+@media screen and (min-width: 1158px) {
+	.address__list {
+	font-size: 16px;
+		flex-direction: row;
+	}
 }
 
 .address__item:not(:last-child) {
-	margin-right: 40px;
+	margin-bottom: 12px;
+}
+
+@media screen and (min-width: 1158px) {
+	.address__item:not(:last-child) {
+		margin-right: 40px;
+		margin-bottom: 0;
+	}
 }
 
 .address__link {
 	color: #434455;
-	padding: 24px 0;
 	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 1158px) {
+	.address__link {
+		padding: 24px 0;
+	}
 }
 
 .address__link:hover,
@@ -195,38 +231,93 @@ body {
 	color: #404BBF;
 }
 
-/*-----------------*/
-/*--- solutions ---*/
-/*-----------------*/
-.solutions {
-	/* background-color: #2E2F42; */
-	padding: 188px 0;
-	background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), url('../images/people-office.jpg');
+/*------------*/
+/*--- hero ---*/
+/*------------*/
+.hero {
+	background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), url('../images/hero_bg_mob_1x.jpg');
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
 	max-width: 1440px;
 	margin: 0 auto;
+	padding: 72px 0;
 }
 
-.solutions__container {
+/* 2x screens, retina, 640x480 image */
+@media screen and (min-device-pixel-ratio: 2),
+(min-resolution: 2dppx),
+(min-resolution: 192dpi) {
+	.hero {
+		background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), url('../images/hero_bg_mob_2x.jpg');
+	}
+}
+
+@media screen and (min-width: 768px) {
+	.hero {
+		background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)),
+			url('../images/hero_bg_tab_1x.jpg');
+		padding: 112px 0;
+	}
+
+	/* 2x screens, retina, 640x480 image */
+	@media screen and (min-device-pixel-ratio: 2),
+	(min-resolution: 2dppx),
+	(min-resolution: 192dpi) {
+		.hero {
+			background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), url('../images/hero_bg_tab_2x.jpg');
+		}
+	}
+}
+
+
+
+@media screen and (min-width: 1158px) {
+	.hero {
+		background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)),
+			url('../images/hero_bg_1x.jpg');
+		padding: 188px 0;
+	}
+
+	/* 2x screens, retina, 640x480 image */
+	@media screen and (min-device-pixel-ratio: 2),
+	(min-resolution: 2dppx),
+	(min-resolution: 192dpi) {
+		.hero {
+			background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), url('../images/hero_bg_2x.jpg');
+		}
+	}
+}
+
+.hero__container {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 }
 
-.solutions__title {
+.hero__title {
 	color: #FFF;
 	text-align: center;
-	font-size: 56px;
 	font-weight: 700;
-	line-height: 1.07;
 	letter-spacing: 0.02em;
-	margin-bottom: 48px;
-	max-width: 496px;
+	margin-bottom: 72px;
+	font-size: 36px;
+	line-height: 1.11;
+	text-transform: capitalize;
+	padding: 0 52px;
 }
 
-.solutions__btn {
+@media screen and (min-width: 768px) {
+	.hero__title {
+		padding: 0;
+		font-size: 56px;
+		line-height: 1.07;
+		max-width: 496px;
+		margin-bottom: 48px;
+	}
+}
+
+.hero__btn {
 	background: #4D5AE5;
 	color: #fff;
 	font-weight: 500;
@@ -240,8 +331,8 @@ body {
 	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.solutions__btn:hover,
-.solutions__btn:focus {
+.hero__btn:hover,
+.hero__btn:focus {
 	background-color: #404BBF;
 }
 
@@ -561,19 +652,60 @@ body {
 /*--------------*/
 .footer {
 	background-color: #2e2f42;
-	padding: 100px 0;
+	padding: 96px 0;
 }
 
-.footer__container {
+@media screen and (min-width: 1158px) {
+	.footer {
+		padding: 100px 0;
+	}
+}
+
+.footer__wrap {
 	display: flex;
-	align-items: baseline
+	align-items: center;
+	flex-direction: column;
+	gap: 72px;
+}
+
+@media screen and (min-width: 768px) {
+	.footer__wrap {
+		flex-direction: row;
+	}
+}
+
+@media screen and (min-width: 768px) and (max-width: 1157px) {
+	.footer__container {
+		padding-left: 108px;
+		padding-right: 108px;
+	}
+
+	.footer__wrap {
+		flex-wrap: wrap;
+		max-width: 550px;
+		margin: 0 auto;
+	}
+}
+
+@media screen and (min-width: 1158px) {
+	.footer__wrap {
+		align-items: baseline;
+		gap: unset;
+	}
 }
 
 /*-----------------------*/
 /*--- footer__column1 ---*/
 /*-----------------------*/
 .footer__column1 {
-	margin-right: 120px;
+	text-align: center;
+}
+
+@media screen and (min-width: 1158px) {
+	.footer__column1 {
+		margin-right: 120px;
+		padding-bottom: 0px;
+	}
 }
 
 .footer__logo {
@@ -588,23 +720,46 @@ body {
 .footer__body {
 	color: #F4F4FD;
 	line-height: 1.5;
-	max-width: 264px;
+	text-align: left;
+}
+
+@media screen and (min-width: 768px) {
+	.footer__body {
+		width: 264px;
+	}
 }
 
 /*-----------------------*/
 /*--- footer__column2 ---*/
 /*-----------------------*/
-.footer__column2 {
-	margin-right: 80px;
+.footer__column2 {}
+
+@media screen and (min-width: 1158px) {
+	.footer__column2 {
+		margin-right: 80px;
+	}
 }
 
 .socials-footer {}
+
+.socials-footer__head {
+	text-align: center;
+}
+
 
 .column-head {
 	margin-bottom: 16px;
 	font-weight: 500;
 	line-height: 1.5;
 	color: #fff;
+	text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+	.column-head {
+
+		text-align: left;
+	}
 }
 
 .socials-footer__list {
@@ -641,12 +796,28 @@ body {
 .subscribe {
 	display: flex;
 	flex-direction: column;
-	flex-grow: 1;
+	width: 100%;
+}
+
+@media screen and (min-width: 1158px) {
+	.subscribe-form {
+		flex-grow: 1;
+		width: auto;
+	}
 }
 
 .subscribe-form {
 	display: flex;
-	gap: 24px;
+	align-items: center;
+	flex-direction: column;
+	gap: 16px;
+}
+
+@media screen and (min-width: 768px) {
+	.subscribe-form {
+		gap: 24px;
+		flex-direction: row;
+	}
 }
 
 .subscribe-form__input {
@@ -660,11 +831,20 @@ body {
 	letter-spacing: 0.04em;
 	flex-grow: 1;
 	height: 40px;
-	width: 264px;
 	border: 1px solid #ffffff;
 	background-color: transparent;
 	padding-left: 16px;
+	width: 288px;
+	opacity: 0.3;
 }
+
+@media screen and (min-width: 1158px) {
+	.subscribe-form__input {
+		width: 264px;
+		opacity: 1;
+	}
+}
+
 
 .subscribe-form__input::placeholder {
 	color: #ffffff;
@@ -677,7 +857,7 @@ body {
 	background-color: #4D5AE5;
 	border: none;
 	height: 40px;
-	min-width: 165px;
+	width: 165px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
