--- a/css/styles.css
+++ b/css/styles.css
@@ -43,16 +43,22 @@ body {
 }
 
 .container {
-	max-width: 1158px;
 	min-width: 320px;
 	padding-left: 16px;
 	padding-right: 16px;
-
 	margin: 0 auto;
+	max-width: 320px;
+}
+
+@media screen and (min-width: 768px) {
+	.container {
+		max-width: 768px;
+	}
 }
 
 @media screen and (min-width: 1158px) {
 	.container {
+		max-width: 1158px;
 		padding-left: 15px;
 		padding-right: 15px;
 	}
@@ -104,14 +110,14 @@ body {
 	align-items: center;
 }
 
-.nav__logo {
+.nav__logo {}
 
-}
 @media screen and (min-width: 768px) {
 	.nav__logo {
 		margin-right: 120px;
 	}
 }
+
 @media screen and (min-width: 1158px) {
 	.nav__logo {
 		margin-right: 76px;
@@ -126,6 +132,7 @@ body {
 	color: #4D5AE5;
 	letter-spacing: 0.03em;
 	text-transform: uppercase;
+	padding: 17px 0;
 }
 
 .logo__span {
@@ -136,7 +143,9 @@ body {
 	line-height: 1.5;
 	display: none;
 	align-items: center;
+	gap: 40px;
 }
+
 @media screen and (min-width: 768px) {
 	.nav__list {
 		display: flex;
@@ -144,10 +153,6 @@ body {
 }
 
 .nav__item {}
-
-.nav__item:not(:last-child) {
-	margin-right: 40px;
-}
 
 .nav__link {
 	display: block;
@@ -185,6 +190,13 @@ body {
 .address {
 	line-height: 1.5;
 	font-style: normal;
+	display: none;
+}
+
+@media screen and (min-width: 768px) {
+	.address {
+		display: block;
+	}
 }
 
 .address__list {}
@@ -199,7 +211,7 @@ body {
 
 @media screen and (min-width: 1158px) {
 	.address__list {
-	font-size: 16px;
+		font-size: 16px;
 		flex-direction: row;
 	}
 }
@@ -231,6 +243,22 @@ body {
 	color: #404BBF;
 }
 
+/*----------------*/
+/*--- mob-menu ---*/
+/*----------------*/
+.open-menu-btn {
+	padding: 0;
+	background-color: transparent;
+	border: none;
+	line-height: 0;
+}
+
+@media screen and (min-width: 768px) {
+	.open-menu-btn {
+		display: none;
+	}
+}
+
 /*------------*/
 /*--- hero ---*/
 /*------------*/
@@ -239,7 +267,7 @@ body {
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
-	max-width: 1440px;
+	max-width: 320px;
 	margin: 0 auto;
 	padding: 72px 0;
 }
@@ -256,7 +284,8 @@ body {
 @media screen and (min-width: 768px) {
 	.hero {
 		background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)),
-			url('../images/hero_bg_tab_1x.jpg');
+		url('../images/hero_bg_tab_1x.jpg');
+		max-width: 768px;
 		padding: 112px 0;
 	}
 
@@ -277,6 +306,7 @@ body {
 		background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)),
 			url('../images/hero_bg_1x.jpg');
 		padding: 188px 0;
+		max-width: 1440px;
 	}
 
 	/* 2x screens, retina, 640x480 image */
@@ -661,7 +691,7 @@ body {
 	}
 }
 
-.footer__wrap {
+.footer__inner {
 	display: flex;
 	align-items: center;
 	flex-direction: column;
@@ -669,7 +699,7 @@ body {
 }
 
 @media screen and (min-width: 768px) {
-	.footer__wrap {
+	.footer__inner {
 		flex-direction: row;
 	}
 }
@@ -680,7 +710,7 @@ body {
 		padding-right: 108px;
 	}
 
-	.footer__wrap {
+	.footer__inner {
 		flex-wrap: wrap;
 		max-width: 550px;
 		margin: 0 auto;
@@ -688,7 +718,7 @@ body {
 }
 
 @media screen and (min-width: 1158px) {
-	.footer__wrap {
+	.footer__inner {
 		align-items: baseline;
 		gap: unset;
 	}
