--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,10 @@ body {
 	background-color: #fff;
 }
 
+.no-scroll {
+	overflow: hidden;
+}
+
 .container {
 	/* min-width: 320px; */
 	padding-left: 16px;
@@ -110,7 +114,9 @@ body {
 	align-items: center;
 }
 
-.nav__logo {}
+.nav__logo {
+	padding: 17px 0;
+}
 
 @media screen and (min-width: 768px) {
 	.nav__logo {
@@ -132,7 +138,6 @@ body {
 	color: #4D5AE5;
 	letter-spacing: 0.03em;
 	text-transform: uppercase;
-	padding: 17px 0;
 }
 
 .logo__span {
@@ -246,7 +251,7 @@ body {
 /*----------------*/
 /*--- mob-menu ---*/
 /*----------------*/
-.open-menu-btn {
+.mob-menu__open-btn {
 	padding: 0;
 	background-color: transparent;
 	border: none;
@@ -254,10 +259,138 @@ body {
 }
 
 @media screen and (min-width: 768px) {
-	.open-menu-btn {
+	.mob-menu__open-btn {
 		display: none;
 	}
 }
+
+.mob-menu {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	background-color: #fff;
+	padding: 72px 24px 40px 16px;
+	display: flex;
+	flex-direction: column;
+	transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 768px) {
+	.mob-menu {
+		display: none;
+	}
+}
+
+.is-hidden {
+	opacity: 0;
+	visibility: hidden;
+	pointer-events: none;
+}
+
+.mob-menu__close-btn {
+	position: absolute;
+	top: 24px;
+	right: 24px;
+	border-radius: 50%;
+	width: 24px;
+	height: 24px;
+	background-color: transparent;
+	border: 1px solid #E7E9FC;
+	line-height: 0;
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mob-menu__close-btn:hover {
+	background-color: #E7E9FC;
+}
+
+.list-mob-menu {
+	display: flex;
+	flex-direction: column;
+	gap: 40px;
+	flex-grow: 1;
+}
+
+.list-mob-menu__item {}
+
+.list-mob-menu__link {
+	color: #2E2F42;
+	font-size: 36px;
+	font-weight: 700;
+	line-height: 1.11;
+	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.list-mob-menu__item.active .list-mob-menu__link,
+.list-mob-menu__link:hover {
+	color: #404BBF;
+}
+
+.mob-menu__inner {
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-end;
+}
+
+.mob-menu__address {
+	font-style: normal;
+}
+
+.address-mob-menu {
+	margin-bottom: 48px;
+}
+
+.address-mob-menu__list {}
+
+.address-mob-menu__item {}
+
+.address-mob-menu__item:first-child {
+	margin-bottom: 24px;
+}
+
+.address-mob-menu__link {
+	color: #434455;
+	font-size: 20px;
+	font-weight: 500;
+	line-height: 1.2;
+	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.address-mob-menu__item.active .address-mob-menu__link,
+.address-mob-menu__link:hover {
+	color: #4D5AE5;
+}
+
+.mob-menu__social {}
+
+.social-mob-menu {
+	display: flex;
+	gap: 40px;
+}
+
+.social-mob-menu__item {}
+
+.social-mob-menu__link {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 40px;
+	height: 40px;
+	background-color: #4D5AE5;
+	border-radius: 50%;
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-mob-menu__link:hover {
+	background-color: #404BBF;
+}
+
+.social-mob-menu__icon {
+	fill: #fff;
+}
+
 
 /*------------*/
 /*--- hero ---*/
@@ -284,7 +417,7 @@ body {
 @media screen and (min-width: 768px) {
 	.hero {
 		background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)),
-		url('../images/hero_bg_tab_1x.jpg');
+			url('../images/hero_bg_tab_1x.jpg');
 		max-width: 768px;
 		padding: 112px 0;
 	}
@@ -656,7 +789,7 @@ body {
 	}
 
 	.item-portfolio {
-		width: calc((100% - 48px) / 2);
+		width: calc((100% - 24px) / 2);
 		background: #FFF;
 		transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 	}
@@ -700,6 +833,7 @@ body {
 
 @media screen and (min-width: 768px) {
 	.footer__container {
+		align-items: baseline;
 		flex-direction: row;
 	}
 }
@@ -708,7 +842,6 @@ body {
 	.footer__container {
 		flex-wrap: wrap;
 		max-width: 584px;
-		/* margin: 0 auto; */
 		gap: 72px 24px;
 	}
 }
@@ -727,10 +860,15 @@ body {
 	text-align: center;
 }
 
+@media screen and (min-width: 768px) {
+	.footer__column1 {
+		text-align: left;
+	}
+}
+
 @media screen and (min-width: 1158px) {
 	.footer__column1 {
 		margin-right: 120px;
-		padding-bottom: 0px;
 	}
 }
 
@@ -921,6 +1059,7 @@ body {
 	visibility: hidden;
 	pointer-events: none;
 	transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	overflow: scroll;
 }
 
 .is-open {
@@ -934,13 +1073,20 @@ body {
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	width: 408px;
+	width: 288px;
 	min-height: 584px;
 	border-radius: 4px;
 	background: #FCFCFC;
+	padding: 72px 16px 24px 16px;
 	box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 2px 1px 0px rgba(0, 0, 0, 0.20);
-	padding: 72px 24px 24px 24px;
 	transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 768px) {
+	.modal {
+		width: 408px;
+		padding: 72px 24px 24px 24px;
+	}
 }
 
 .modal__close-btn {
@@ -956,7 +1102,6 @@ body {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	margin-bottom: 24px;
 	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -1060,8 +1205,8 @@ body {
 }
 
 .terms__label {
-
 	letter-spacing: 0.04em;
+	display: flex;
 }
 
 .modal__checkbox {
